--- a/src/interfaces/appsite/templates/base.html
+++ b/src/interfaces/appsite/templates/base.html
@@ -6,10 +6,11 @@
 <head>
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
-   {% block title %} {% endblock %}
+   <title>{% block title %} {% endblock %}</title>
 
      <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css'>
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css'>
+<link rel="stylesheet" href="{% static 'css/base.css' %}">
 
 {% block css} {% endblock %}
 
@@ -69,4 +70,12 @@
 
   {% block content %} {% endblock %}
 
-  
+<div class="footer">
+  <div style="display:table-cell;vertical-align: middle;">
+  <h6>© Copyright 2022</h6>
+  </div>
+</div>
+
+</body>
+
+</html>
