--- a/src/interfaces/appsite/templates/base.html
+++ b/src/interfaces/appsite/templates/base.html
@@ -12,7 +12,7 @@
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css'>
 <link rel="stylesheet" href="{% static 'css/base.css' %}">
 
-{% block css} {% endblock %}
+{% block css %} {% endblock %}
 
    </head>
 
@@ -59,14 +59,6 @@
     <a>LIFE</a>
     </div>
     </div>
-
-<!--  Main  -->
-  <div class="all-wrap">
-
-  <div class="circle-wrap">
-    <div class="circle"><h1>DM</h1></div>
-  </div>
-  <hr>
 
   {% block content %} {% endblock %}
 
