--- a/src/interfaces/appsite/templates/base.html
+++ b/src/interfaces/appsite/templates/base.html
@@ -17,7 +17,6 @@
    </head>
 
    <body>
-   <body>
 
 <!--   div opacity for pop up -->
     <div id="div-op-popup">
@@ -60,7 +59,24 @@
     </div>
     </div>
 
+      <div class="all-wrap">
+
   {% block content %} {% endblock %}
+
+     <div class="news-wrap">
+      <h2><span style="color:#05D23A;">Subscribe</span> to <span style="color:#F2CB05;">NEWSLETTER<span></h2>
+      <div class="form-div">
+        <form name="newsletter" method="POST">
+        {% csrf_token %}
+          <input type="text" maxlength="20" name="name" placeholder="Name" required>
+          </input><input type="email" name="email" placeholder="Email" required></input>
+      <br>
+      <button type="">Subscribe</button>
+      </form>
+        </div>
+    </div>
+
+  </div>
 
 <div class="footer">
   <div style="display:table-cell;vertical-align: middle;">
