--- a/src/interfaces/appsite/templates/sections.html
+++ b/src/interfaces/appsite/templates/sections.html
@@ -1,21 +1,21 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}Travel {% endblock %}
+{% block title %}{{ section }}{% endblock %}
 
 {% block css %}<link rel="stylesheet" href="{% static 'css/home.css' %}">{% endblock %}
 
 {% block content %}
 
 
-{{ travel_posts.count}}
+{{ posts.count}}
 
 <div class="row">
 
-{% for post in travel_posts %}
+{% for post in posts_section %}
 
   <div class="column">
-      <a href="{% url 'travel_post' post_id=post.id %}">{{post.title}}</a>
+      <a href="{% url 'section_post' section=section post_id=post.id %}">{{post.title}}</a>
     <img src="/media/{{post.first_image.image}}" style="width:100%">
   </div>
 
