--- a/src/interfaces/appsite/templates/base.html
+++ b/src/interfaces/appsite/templates/base.html
@@ -84,6 +84,29 @@
   </div>
 </div>
 
+</div>
+
+
+<!-- Pop Up Newsletter(for home.html only) -->
+
+  <div id="pop-up-div" style="display:none;">
+<div class="news-pop-up">
+   <a id="x-close" onclick="closeDiv();">X</a>
+      <h2 style='color:white;margin-bottom:50px;margin-top:20px;'><span style="color:#05D23A;">Subscribe</span> to <span style="color:#F2CB05;">NEWSLETTER<span></h2>
+      <div class="form-div pop-div">
+        <form name="pop-newsletter" method="POST">
+        {% csrf_token %}
+          <input type="text" maxlength="20" name="name-pop-up" placeholder="Name" required>
+          </input><br>
+        <input type="email" name="email-pop-up" placeholder="Email" required></input>
+      <br>
+      <button type="">Subscribe</button>
+      </form>
+        </div>
+    </div>
+    </div>
+<!-- ////////// -->
+
 </body>
 
 </html>
