--- a/src/interfaces/appsite/templates/sections.html
+++ b/src/interfaces/appsite/templates/sections.html
@@ -3,7 +3,7 @@
 
 {% block title %}{{ section }}{% endblock %}
 
-{% block css %}<link rel="stylesheet" href="{% static 'css/home.css' %}">
+{% block css %}
 <link rel="stylesheet" href="{% static 'css/sections.css' %}">
 {% endblock %}
 
@@ -13,19 +13,21 @@
 
 {% for post in posts_section %}
 
-  <div class="column img_wrap">
-      <h2 class="title_text">{{ post.title }}</h2>
-      <div class="img_txt_div">
-      <div class="img_txt">
-      <p>{{ post.description|truncatechars:100 }}</p>
+  <div class="column img-wrap">
+      <h2 class="title-text">{{ post.title }}</h2>
+      <div class="img-txt-div">
+      <div class="img-txt">
+      <p id="post-description-{{post.id}}" onmouseover='imgOnHover({{post.id}})' onmouseout='imgOnOut({{post.id}})'>{{ post.description|truncatechars:100 }}</p>
       </div>
       </div>
-    <a href="{% url 'section_post' section=section post_id=post.id %}"><img src="/media/{{post.first_image.image}}" style="width:100%"></a>
+    <a href="{% url 'section_post' section=section post_id=post.id %}"><img id="post-img-{{post.id}}" src="/media/{{post.first_image.image}}" style="width:100%"></a>
   </div>
 
 
 {% endfor %}
 
 </div>
+
+<script  src="{% static 'js/sections.js' %}"></script>
 
 {% endblock %}
