--- a/src/interfaces/appsite/templates/sections.html
+++ b/src/interfaces/appsite/templates/sections.html
@@ -16,8 +16,8 @@
   <div class="column img-wrap">
       <h2 class="title-text">{{ post.title }}</h2>
       <div class="img-txt-div">
-      <div class="img-txt">
-      <p id="post-description-{{post.id}}" onmouseover='imgOnHover({{post.id}})' onmouseout='imgOnOut({{post.id}})'>{{ post.description|truncatechars:100 }}</p>
+      <div onmouseover='imgOnHover({{post.id}})' onmouseout='imgOnOut({{post.id}})' class="img-txt">
+      <a href="{% url 'section_post' section=section post_id=post.id %}">{{ post.description|truncatechars:100 }}</a>
       </div>
       </div>
     <a href="{% url 'section_post' section=section post_id=post.id %}">
