comment section started

--- a/src/interfaces/appsite/templates/base.html
+++ b/src/interfaces/appsite/templates/base.html
@@ -46,6 +46,7 @@
 
   <div class="nav">
     <div class="nav-socials">
+      <a title="Login" class="fa-regular fa-user"></a>
       <a class="fa-brands fa-facebook-f"></a>
       <a class="fa-brands fa-instagram"></a>
     </div>
