--- a/src/interfaces/appsite/static/css/base.css
+++ b/src/interfaces/appsite/static/css/base.css
@@ -34,110 +34,121 @@ hr{
     display:none;
   }
 
-  .nav{
-    font-size: 17px;
-    font-family: 'Montserrat',sans-serif;
-    display:block;
-    font-weight: bold;
-    width: 100%;
-    margin-bottom: 30px;
-    background-color: #1B1A17;
-    height: 50px;
-  }
+.nav{
+  font-size: 17px;
+  font-family: 'Montserrat',sans-serif;
+  display:block;
+  font-weight: bold;
+  width: 100%;
+  margin-bottom: 30px;
+  background-color: #1B1A17;
+  height: 50px;
+}
 
-  .nav-menu{
-    padding-top: 10px;
-    margin: auto;
-    width: 80%;
-    text-align: center;
-    color: white;
-  }
+.nav-menu{
+  padding-top: 10px;
+  margin: auto;
+  width: 80%;
+  text-align: center;
+  color: white;
+}
 
-  .nav-menu a{
-    cursor: pointer;
-    margin: 10px;
-    transition: all 0.2s ease;
-    text-decoration: none;
-    color: white;
-  }
+.nav-menu a{
+  cursor: pointer;
+  margin: 10px;
+  transition: all 0.2s ease;
+  text-decoration: none;
+  color: white;
+}
 
-  .nav-menu a:hover{
-    color: #FD7E7E !important;
-  }
+.nav-menu a:hover{
+  color: #FD7E7E !important;
+}
 
-  .nav-socials{
-    padding-top: 2px;
-    position: absolute;
-    right: 0;
-    top: 0;
-    margin: 5px;
-  }
+.nav-socials{
+  padding-top: 2px;
+  position: absolute;
+  right: 0;
+  top: 0;
+  margin: 5px;
+}
 
-  .nav-socials a{
-    -webkit-filter: brightness(120%);
-    margin-left: 8px;
-    text-decoration: none;
-    cursor: pointer;
-  }
+.nav-socials a{
+  -webkit-filter: brightness(120%);
+  margin-left: 8px;
+  text-decoration: none;
+  cursor: pointer;
+}
 
-  /* Icons */
+/* Icons */
 
-  .fa-facebook-f{
-    font-size: 30px;
-    color: #3AB0FF;
-  }
 
-  .fa-instagram{
-    font-size: 32px;
-    background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
-  -webkit-background-clip: text;
-  /* Also define standard property for compatibility */
-  background-clip: text;
-  -webkit-text-fill-color: transparent;
-  }
+.fa-user{
+  color: white;
+  font-size: 28px;
+  transition: all 0.2s ease;
+}
 
-  .fa-instagram:hover{
-    -webkit-filter: brightness(200%);
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    -ms-transition: all 0.5s ease;
-    transition: all 0.5s ease;
-  }
+.fa-facebook-f{
+  font-size: 30px;
+  color: #3AB0FF;
+}
 
-  .fa-facebook-f:hover{
-    -webkit-filter: brightness(200%);
-     -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    -ms-transition: all 0.5s ease;
-    transition: all 0.5s ease;
-  }
+.fa-instagram{
+  font-size: 32px;
+  background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+-webkit-background-clip: text;
+/* Also define standard property for compatibility */
+background-clip: text;
+-webkit-text-fill-color: transparent;
+}
 
-  /* Circle name */
+.fa-user:hover{
+  color: #05D23A;
+}
 
-  .circle-wrap{
-    width: 100%;
-    height: 4em;
-  }
+.fa-instagram:hover{
+  -webkit-filter: brightness(200%);
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  -ms-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
 
-  .circle{
-    width: 68px;
-    items-align: center;
-    background-color: #180A0A;
-    height: 100%;
-    margin: auto;
-    border-radius: 50%;
-    margin-top: 20px;
-    text-align: center;
-  }
+.fa-facebook-f:hover{
+  -webkit-filter: brightness(200%);
+   -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  -ms-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
 
-  .circle h1{
-    color: white;
-    padding-top: 18%;
-    font-family: 'Cormorant SC', serif;
-    font-size: 35px;
-  }
+/* Circle name */
+
+.circle-wrap{
+  width: 100%;
+  height: 4em;
+}
+
+.circle{
+  width: 68px;
+  items-align: center;
+  background-color: #180A0A;
+  height: 100%;
+  margin: auto;
+  border-radius: 50%;
+  margin-top: 20px;
+  text-align: center;
+}
+
+.circle h1{
+  color: white;
+  padding-top: 18%;
+  font-family: 'Cormorant SC', serif;
+  font-size: 35px;
+}
 
 /* Newsletter */
 
