--- a/src/interfaces/appsite/static/css/post.css
+++ b/src/interfaces/appsite/static/css/post.css
@@ -1,7 +1,3 @@
-/*body{*/
-/*    background-color: #D9F8C4;*/
-/*}*/
-
 .post-title{
     font-size: 3.5em;
     text-align: center;
@@ -21,7 +17,7 @@
 
 .post-img img{
     max-width: 80%;
-    max-height: 80%;
+    max-height: 500px;
     margin-left: 10%;
     margin-right: 10%;
 }
@@ -36,4 +32,77 @@
 .entry-wrap h4{
     font-size: 30px;
     margin-bottom: 30px;
+}
+
+
+
+/* Comments */
+
+.comment-div{
+  width: 100%;
+}
+
+.comment-title{
+  font-size: 2.5em;
+  font-family: 'Merriweather', serif;
+  text-align: center;
+  margin-top: 30px;
+  margin-bottom: 50px;
+}
+
+.comment-input{
+  width: 50%;
+  margin: auto;
+}
+
+.comment-div textarea{
+  height: 100px;
+  width: 100%;
+  resize: none;
+}
+
+.comment-div button{
+  height: 35px;
+  font-size: 18px;
+  font-weight: bold;
+  text-align: center;
+  background-color: #E94560;
+  border: solid;
+  color: #202020;
+  transition: all 0.3s ease;
+  margin-bottom: 25px;
+}
+
+.comment-div button:hover{
+  background-color: white;
+  color: #E94560;
+  border-color: #E94560;
+}
+
+.comment-wrap{
+  width: 100%;
+  margin-top: 25px;
+  margin-bottom: 25px;
+}
+
+.comment-posted{
+  width: 300px;
+  margin: auto;
+  cursor: default;
+}
+
+.user-comment{
+  border:solid;
+  min-height: 50px;
+  padding: 5px;
+  overflow-wrap: break-word;
+}
+
+.username{
+  font-family: 'Merriweather', serif;
+  font-weight: bold;
+}
+
+.comment{
+  font-family: 'Montserrat',sans-serif;
 }
