--- a/src/interfaces/appsite/templates/base.html
+++ b/src/interfaces/appsite/templates/base.html
@@ -32,7 +32,7 @@
                     <ul>
                         <li><a href="{% url 'home' %}">HOME</a></li>
                         <li><a href="{% url 'blog_section' section='TRAVEL' %}">TRAVEL</a></li>
-                        <li><a href="{% url 'blog_section' section='BOOK' %}">BOOK</a></li>
+                        <li><a href="{% url 'blog_section' section='BOOK' %}">BOOKS</a></li>
                         <li><a href="{% url 'blog_section' section='MUSIC' %}">MUSIC</a></li>
                         <li><a href="{% url 'blog_section' section='FIRE' %}">FIRE</a></li>
                         <li><a href="{% url 'blog_section' section='LIFE' %}">LIFE</a></li>
