--- a/src/interfaces/appsite/templates/sign/sign.html
+++ b/src/interfaces/appsite/templates/sign/sign.html
@@ -31,7 +31,7 @@
   <br>
   <input placeholder="Password" type="password" name="sign_in_password" required></input>
 <br>
-  <a href="" class="rst-pw">Reset Password</a>
+  <a href="{% url 'password_reset' %}" class="rst-pw">Reset Password</a>
   <br>
 <button class="sign-in-btn" type="submit">Sign In</button>
   </form>
