--- a/src/interfaces/appsite/templates/sections.html
+++ b/src/interfaces/appsite/templates/sections.html
@@ -9,6 +9,10 @@
 
 {% block content %}
 
+<h1 style="text-align:center;font-family:'Montserrat',sans-serif;">{{ section }}</h1>
+
+<hr>
+
 <div class="row">
 
 {% for post in posts_section %}
