--- a/src/interfaces/appsite/templates/post.html
+++ b/src/interfaces/appsite/templates/post.html
@@ -19,6 +19,8 @@
 
 {% for entry in entries %}
 
+{% if entry.visible == True %}
+
 <div class="entry-wrap">
 
 <h4>{{ entry.title }}</h4>
@@ -27,6 +29,8 @@
 </div>
 
 <hr>
+
+{% endif %}
 
 {% endfor %}
 
@@ -59,17 +63,6 @@
 
 <!--/////////////-->
 
-     <div class="news-wrap">
-      <h2><span style="color:#05D23A;">Subscribe</span> to <span style="color:#F2CB05;">NEWSLETTER<span></h2>
-      <div class="form-div">
-        <form name="newsletter" method="POST" action="">
-        {% csrf_token %}
-          <input type="text" maxlength="20" name="name" placeholder="Name" required></input>
-          <input type="email" name="email" placeholder="Email" required></input>
-      <br>
-      <button type="submit">Subscribe</button>
-      </form>
-        </div>
-    </div>
+{% include 'newsletter.html' %}
 
 {% endblock %}
