--- a/src/interfaces/appsite/templates/newsletter.html
+++ b/src/interfaces/appsite/templates/newsletter.html
@@ -1,10 +1,10 @@
      <div class="news-wrap">
       <h2><span style="color:#05D23A;">Subscribe</span> to <span style="color:#F2CB05;">NEWSLETTER<span></h2>
       <div class="form-div">
-        <form name="newsletter" method="POST" action="">
+        <form name="newsletter" method="POST" action="{% url 'newsletter_sign_up' %}">
         {% csrf_token %}
-          <input type="text" maxlength="20" name="name" placeholder="Name" required></input>
-          <input type="email" name="email" placeholder="Email" required></input>
+          <input type="text" maxlength="20" name="name-newsletter" placeholder="Name" required></input>
+          <input type="email" name="email-newsletter" placeholder="Email" required></input>
       <br>
       <button type="submit">Subscribe</button>
       </form>
